--- a/website/templates/members/profile.html
+++ b/website/templates/members/profile.html
@@ -18,8 +18,8 @@
                     <form id="form_update" method="post">
                         {% csrf_token %}
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                            <input class="mdl-textfield__input" type="text" id="sample3" name="login" value="{{ member.login }}">
-                            <label class="mdl-textfield__label" for="sample3">User login</label>
+                            <input class="mdl-textfield__input" type="text" id="sample3" name="email" value="{{ member.email }}">
+                            <label class="mdl-textfield__label" for="sample3">User email</label>
                         </div>
                         <br>
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
@@ -65,7 +65,7 @@
                 </div>
             {% endif %}
 
-            {% if member.login and member_groups %}
+            {% if member.email and member_groups %}
                 <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-desktop mdl-card mdl-shadow--2dp">
                     <table class="mdl-data-table mdl-js-data-table" style="width: 100%;">
                         <thead>
@@ -92,7 +92,7 @@
         </div>
     </main>
 
-    {% if member.login %}
+    {% if member.email %}
         <button id="add_button" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored show-modal" data-modal="#modal_form">
             <i class="material-icons">add</i>
         </button>
