--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -185,7 +185,9 @@ _:-ms-input-placeholder, :root .demo-graph {
 
 .server-image {
     max-width:200px;
+    width: 200px;
     max-height: 200px;
+    height: 200px;
 }
 
 .mdl-list__item {
