Feat (server): Add server icon support

--- a/website/templates/members/profile.html
+++ b/website/templates/members/profile.html
@@ -12,7 +12,7 @@
         <div class="mdl-grid">
             <div class="mdl-grid mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-shadow--4dp">
                 <div class="mdl-cell mdl-cell--4-col mdl-cell--hide-phone mdl-cell--3-col-tablet">
-                    <img src="https://cdn.discordapp.com/avatars/329630124070666240/1f44edb172b87085c3ecfd151c021b40?size=256" width="100%">
+                    <img src="https://cdn.discordapp.com/avatars/{{ member.id }}/{{ member.icon_url }}?size=256" width="100%">
                 </div>
                 <div class="mdl-cell mdl-cell--8-col mdl-cell--3-col-tablet">
                     <form id="form_update" method="post">
