--- a/website/templates/members/list.html
+++ b/website/templates/members/list.html
@@ -4,18 +4,32 @@
 {% block content %}
     <header class="mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Members</span>
-        <!--
+            <span class="mdl-layout-title">
+                Members {% if server %}of {{ server }}{% endif %}
+            </span>
             <div class="mdl-layout-spacer"></div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right">
-                <label class="mdl-button mdl-js-button mdl-button--icon" for="fixed-header-drawer-exp">
-                    <i class="material-icons">search</i>
-                </label>
-                <div class="mdl-textfield__expandable-holder">
-                    <input class="mdl-textfield__input" type="text" name="sample" id="fixed-header-drawer-exp">
+            <form>
+                <input name="server" value="{{ request.GET.server }}" hidden>
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right">
+                    <label class="mdl-button mdl-js-button mdl-button--icon" for="username">
+                        <i class="material-icons">person</i>
+                    </label>
+                    <div class="mdl-textfield__expandable-holder">
+                        <input class="mdl-textfield__input" type="text" name="name" id="username" value="{{ request.GET.name }}">
+                    </div>
                 </div>
-            </div>
-        -->
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right">
+                    <label class="mdl-button mdl-js-button mdl-button--icon" for="email">
+                        <i class="material-icons">email</i>
+                    </label>
+                    <div class="mdl-textfield__expandable-holder">
+                        <input class="mdl-textfield__input" type="text" name="email" id="email" value="{{ request.GET.email }}">
+                    </div>
+                </div>
+                <button class="mdl-button mdl-js-button mdl-button--icon">
+                    <i class="material-icons">search</i>
+                </button>
+            </form>
         </div>
     </header>
 
