--- a/website/templates/users/home.html
+++ b/website/templates/users/home.html
@@ -28,6 +28,7 @@
 
     <main class="mdl-layout__content mdl-color--grey-100">
         <div class="mdl-grid">
+            {% comment %}
             <div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
                 <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
                     <div class="mdl-card__title mdl-color--teal-300"></div>
@@ -36,6 +37,7 @@
                     </div>
                 </div>
             </div>
+            {% endcomment %}
             <div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
                 <div class="demo-servers mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
                     <div class="mdl-card__title mdl-color--teal-300"></div>
