Feat (api): New design

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,53 +5,59 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
     <title>EpiLogin</title>
 
-    <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.6/summernote.css" rel="stylesheet">
-    <link href="{% static 'css/breadcrump.css' %}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'css/sidebar.css' %}" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'css/theme.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/dialog-polyfill.css' %}" rel="stylesheet" type="text/css"/>
     {% block css %}
     {% endblock %}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="{% static 'js/dialog-polyfill.js' %}"></script>
     {% block javascript %}
     {% endblock %}
 
     <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
 </head>
 <body>
-    <div class="sidebar">
-        <div class="text-center header-logo">
-            <a href="{% url 'users:home' %}">
-                <span class="backtobasics-logo"></span>
-            </a>
+    <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+        <div class="mdl-layout__drawer">
+            <header class="demo-drawer-header mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+                <img src="images/user.jpg" class="demo-avatar">
+                <div class="demo-avatar-dropdown">
+                    <span>{{ user.email }}</span>
+                </div>
+            </header>
+            <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
+                <a class="mdl-navigation__link" href="{% url 'admin:index' %}">
+                    <i class=" material-icons">
+                        supervisor_account
+                    </i>
+                    Admin
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'users:home' %}">
+                    <i class="material-icons">
+                        home
+                    </i>
+                    Home
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'logout' %}">
+                    <i class="material-icons">
+                        link_off
+                    </i>
+                    Logout
+                </a>
+            </nav>
         </div>
-        <a href="{% url 'users:home' %}">
-            <img src="https://cdn.discordapp.com/avatars/{{ user_extra.id }}/{{ user_extra.avatar }}"
-                 class="img-responsive img-rounded center-block" width="150">
-        </a>
-        <br>
-        <ul class="list">
-            {% if user.is_superuser %}
-                <li><a href="{% url 'admin:index' %}"><i style="width: 30px;" class="fas fa-hashtag"></i>Admin</a></li>
-            {% endif %}
-            <li><a href="{% url 'users:home' %}"><i style="width: 30px;" class="fas fa-home"></i>Home</a></li>
-            <li><a href="{% url 'logout' %}"><i style="width: 30px;" class="fa fa-sign-out-alt"></i>Logout</a></li>
-        </ul>
-    </div>
-    <div class="side">
-        <div class="container-fluid">
-            {% block content %}
-            {% endblock %}
-        </div>
+
+        {% block content %}
+        {% endblock %}
+
+
     </div>
 
     {% block javascriptend %}
