--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -1,94 +1,303 @@
-.table {
-    font-size: medium;
+html, body {
+  font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
-.table > tbody > tr > td {
-    vertical-align: middle;
+.demo-avatar {
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+}
+.demo-layout .mdl-layout__header .mdl-layout__drawer-button {
+  color: rgba(0, 0, 0, 0.54);
+}
+.mdl-layout__drawer .avatar {
+  margin-bottom: 16px;
+}
+.demo-drawer {
+  border: none;
+}
+.demo-drawer .mdl-menu .mdl-menu__item {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.demo-drawer-header {
+  box-sizing: border-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 16px;
+  height: 151px;
+}
+.demo-avatar-dropdown {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
 }
 
-.library > tbody > tr > td > a {
-    display: inline-block;
-    margin: 0 5px;
+.demo-navigation {
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+.demo-layout .demo-navigation .mdl-navigation__link {
+  display: -webkit-flex !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: rgba(255, 255, 255, 0.56);
+  font-weight: 500;
+}
+.demo-layout .demo-navigation .mdl-navigation__link:hover {
+  background-color: #00BCD4;
+  color: #37474F;
+}
+.demo-navigation .mdl-navigation__link .material-icons {
+  font-size: 24px;
+  color: rgba(255, 255, 255, 0.56);
+  margin-right: 32px;
 }
 
-.page-title {
-    font-size: 1.8em;
-    margin-top: 30px;
-    margin-bottom: 30px;
+.demo-content {
+  max-width: 1080px;
 }
 
-.no-panel-body {
-    font-size: 1.6em;
-    color: #BDBDBD;
-    text-align: center;
-    margin-top: 10px;
+.demo-charts {
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.demo-chart:nth-child(1) {
+  color: #ACEC00;
+}
+.demo-chart:nth-child(2) {
+  color: #00BBD6;
+}
+.demo-chart:nth-child(3) {
+  color: #BA65C9;
+}
+.demo-chart:nth-child(4) {
+  color: #EF3C79;
+}
+.demo-graphs {
+  padding: 16px 32px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+/* TODO: Find a proper solution to have the graphs
+ * not float around outside their container in IE10/11.
+ * Using a browserhacks.com solution for now.
+ */
+_:-ms-input-placeholder, :root .demo-graphs {
+  min-height: 664px;
+}
+_:-ms-input-placeholder, :root .demo-graph {
+  max-height: 300px;
+}
+/* TODO end */
+.demo-graph:nth-child(1) {
+  color: #00b9d8;
+}
+.demo-graph:nth-child(2) {
+  color: #d9006e;
 }
 
-.croppy {
-    object-fit: cover;
-    object-position: center;
-    height: 213px;
-    width: 160px;
-    border-radius: 4px;
+.demo-cards {
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-align-content: flex-start;
+      -ms-flex-line-pack: start;
+          align-content: flex-start;
+}
+.demo-cards .demo-separator {
+  height: 32px;
 }
 
-.trombi-box {
-    display: inline-block;
-    margin: 20px 20px 0px 0px;
-    position: relative;
+.mdl-card__title {
+  color: white;
+  font-size: 24px;
+  font-weight: 400;
+}
+.demo-cards h3 {
+  font-size: 1em;
+}
+.demo-card .mdl-card__title {
+  min-height: 200px;
+  background-position: 90% 100%;
+  background-repeat: no-repeat;
+}
+.demo-updates .mdl-card__title {
+  min-height: 200px;
+  background-image: url('https://redmondmag.com/articles/2014/08/05/~/media/ECG/redmondmag/Images/introimages2014/40624REDMackieWinUpdate.ashx');
+  background-position: 90% 100%;
+  background-repeat: no-repeat;
+}
+.demo-servers .mdl-card__title {
+  min-height: 200px;
+  background-image: url('https://discordbots.org/servers/images/server_img.svg');
+  background-position: 90% 100%;
+  background-repeat: no-repeat;
+}
+.demo-members .mdl-card__title {
+  min-height: 200px;
+  background-image: url('https://pbs.twimg.com/media/DCEe9aPXYAA4joh?format=png');
+  background-position: 90% 100%;
+  background-repeat: no-repeat;
+}
+.demo-cards .mdl-card__actions a {
+  color: #00BCD4;
+  text-decoration: none;
 }
 
-.wrapper {
-    background-color: rgba(0, 0, 0, 0.60);
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    padding: 10px 0px 10px 0px;
-    border-radius: 0px 0px 4px 4px;
-    color: #fff;
+.demo-options h3 {
+  margin: 0;
 }
 
-.protect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: -moz-none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
+.server-image {
+    max-width:200px;
+    max-height: 200px;
 }
 
-.scroll-table {
-    overflow: auto;
-    max-height: 300px;
+.mdl-list__item {
+    padding: 0 16px;
 }
 
-.container-fluid {
-    max-width: 84em;
+.mdl-data-table {
+    border: 0;
 }
 
-.checkbox {
-    margin-top: 0;
-    margin-bottom: 24px;
+$fab-width: 24px;
+$list-width: 200px;
+
+body {
+  background: #ECEFF1;
 }
 
-.checkbox label {
-    font-weight: bold;
+.mdl-layout__content {
+  padding: 24px 12px;
+
+  h1 {
+    font-size: 30px;
+    margin: 0 0 .3em;
+  }
 }
 
-.well {
-    margin-bottom: 0 !important;
+.mdl-sheet__container {
+  position: fixed;
+  right: 32px;
+  bottom: 32px;
+  transform: rotate(0deg);
 }
 
-.btn-static {
-  background-color: #eee;
-  border: 1px solid darkgrey;
-  cursor: default;
+.mdl-sheet {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+
+  background: #FF5722;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+
+  cursor: pointer;
+  transition: all 180ms;
+
+  .mdl-sheet__content {
+    display: none;
+  }
 }
 
-.btn-static:active {
-  -moz-box-shadow:    inset 0 0 0px white;
-  -webkit-box-shadow: inset 0 0 0px white;
-  box-shadow:         inset 0 0 0px white;
+.mdl-sheet__icon {
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-12px, -12px);
+  font-size: 24px;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
 }
+
+.mdl-sheet--opened {
+  background: #fff;
+  color: #263238;
+  border-radius: 2px;
+  width: 240px;
+  height: auto;
+  min-height: 150px;
+  max-height: 80vh;
+  overflow-y: auto;
+
+  .mdl-sheet__icon {
+    display: none;
+  }
+
+  .mdl-sheet__content {
+    display: block;
+  }
+}
+
+#add_button {
+  position: fixed;
+  display: block;
+  right: 0;
+  bottom: 0;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  z-index: 900;
+}
+
+/*
+.demo-options .mdl-checkbox__box-outline {
+  border-color: rgba(255, 255, 255, 0.89);
+}
+.demo-options ul {
+  margin: 0;
+  list-style-type: none;
+}
+.demo-options li {
+  margin: 4px 0;
+}
+
+.demo-options .mdl-card__actions {
+  height: 64px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  box-sizing: border-box;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+*/
