--- a/website/templates/servers/list.html
+++ b/website/templates/servers/list.html
@@ -2,39 +2,27 @@
 {% load static %}
 
 {% block content %}
-    <ol class="breadcrumb breadcrumb-arrow">
-        <li><a href="{% url 'users:home' %}">Home</a></li>
-        <li><span>Servers</span></li>
-    </ol>
-    <div class="row">
-        {% if True or perms.users.view_user %}
-            <div class="col-md-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Server list</h3>
-                    </div>
-                    <div class="panel-body">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>ID</th>
-                                    <th>Show</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for server in servers %}
-                                <tr>
-                                    <td>{{ server.name }}</td>
-                                    <td>{{ server.server_id }}</td>
-                                    <td><a href="{% url 'servers:info' server.server_id %}" class="btn btn-primary" role="button">View Server</a></td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
+    <header class="mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+        <div class="mdl-layout__header-row">
+            <span class="mdl-layout-title">Servers</span>
+        </div>
+    </header>
+
+    <main class="mdl-layout__content mdl-color--grey-100">
+        <div class="mdl-grid">
+            {% for server in servers %}
+                <div class="mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
+                    <div class="demo-card mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
+                        <a href="{% url 'servers:info' server.pk %}">
+                            <div class="mdl-card__title mdl-color--teal-300" style="background-image:url('https://discordbots.org/servers/images/server_img.svg');">
+                            </div>
+                            <div class="mdl-card__actions">
+                                <p class="mdl-button">{{ server }}</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
-            </div>
-        {% endif %}
-    </div>
+            {% endfor %}
+        </div>
+    </main>
 {% endblock %}
