Updating logos and mentions

--- a/website/templates/users/index.html
+++ b/website/templates/users/index.html
@@ -19,7 +19,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
 
-	<script src="{% static 'js/blocks.js' %}"></script>
+	<script src="{% static 'js/config.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/3.0.0/lazysizes.min.js" integrity="sha256-3aNzF0qAl+dcYi1jq/8xNvw6wR5tzgo4AOAacEleQVk=" crossorigin="anonymous"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -122,7 +122,7 @@
                     <img src="{% static 'img/mainpage/lazyload-ph.png' %}" data-src="{% static 'img/mainpage/epifun.png'   %}" class="img-fluid mg-sm lazyload" />
                     <img src="{% static 'img/mainpage/lazyload-ph.png' %}" data-src="{% static 'img/mainpage/redux.png'    %}" class="img-fluid mg-sm lazyload" />
                     <img src="{% static 'img/mainpage/lazyload-ph.png' %}" data-src="{% static 'img/mainpage/2024.png'     %}" class="img-fluid mg-sm lazyload" />
-                    <img src="{% static 'img/mainpage/lazyload-ph.png' %}" data-src="{% static 'img/mainpage/foodit.png'   %}" class="img-fluid mg-sm lazyload" />
+                    <img src="{% static 'img/mainpage/lazyload-ph.png' %}" data-src="{% static 'img/mainpage/inter.png'    %}" class="img-fluid mg-sm lazyload" />
                     <img src="{% static 'img/mainpage/lazyload-ph.png' %}" data-src="{% static 'img/mainpage/epilogin.png' %}" class="img-fluid mg-sm lazyload" />
 				</div>
 			</div>
@@ -144,7 +144,7 @@
 					<div class="col">
 						<h4 class="mg-md text-sm-left text-center tc-white h4-style">
 							À propos
-						</h4><a href="" class="a-btn a-block footer-link">L'équipe</a><a href="mailto:contact@epilogin.fr" class="a-btn a-block footer-link">Nous contacter</a>
+						</h4><a href="https://epilogin.fr/static/CGU.html#Article-8-–-Contact" class="a-btn a-block footer-link">L'équipe</a><a href="mailto:contact@epilogin.fr" class="a-btn a-block footer-link">Nous contacter</a>
 					</div>
 					<div class="col">
 						<h4 class="mg-md text-sm-left text-center tc-white h4-mentions-style">
@@ -179,7 +179,7 @@
 						</div>
 					</div>
 					<div class="col">
-						<a href="https://www.ionis-group.com" target="_blank"><img src="{% static 'img/mainpage/lazyload-ph.png' %}" data-src="{% static 'img/mainpage/ionis.png' %}" class="img-fluid img-9-style mx-auto d-block lazyload" /></a>
+						<a href="https://www.epita.fr" target="_blank"><img src="{% static 'img/mainpage/lazyload-ph.png' %}" data-src="{% static 'img/mainpage/epita_logo.png' %}" class="img-fluid img-9-style mx-auto d-block lazyload" /></a>
 					</div>
 				</div>
 			</div>
